# ESP32-Web-Mesh-Chat

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: chat.rs  esp_now.rs  http.rs  main.rs  wifi.rs
website/: index.html  script.js  style.css
